# Simple-FTP

./: CMakeLists.txt  README.md
include/: fshare.h  fshared.h
src/: fshare.c  fshared.c
test/: CMakeLists.txt  fshare.cpp  fshare.cpp_org
